--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sans",
+  "name": "icarus",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://xtravanilla.github.io/icarus",
